--- a/Ejercicio14/style.css
+++ b/Ejercicio14/style.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 body {
     background-color: rgb(16, 187, 162);
 }
@@ -14,8 +13,6 @@ body {
 }
   
 .row {
-    /*padding-top: 20px;
-    padding-bottom: 20px;*/
     height: 8.5vh;
     display: flex;
     justify-content: center;
@@ -24,6 +21,9 @@ body {
   
   
 #caja-operacion {
+    display: flex;
+    justify-content: right;
+    align-items: center;
     color: rgb(63, 58, 52);
     background-color: white;
     font-size: large;
@@ -32,6 +32,9 @@ body {
 }
   
 #caja-resultado {
+    display: flex;
+    justify-content: right;
+    align-items: center;
     color: rgb(63, 58, 52);
     background-color: white;
     font-size: medium;
@@ -43,6 +46,7 @@ body {
     display: flex;
     justify-content: right;
     align-items: center;
+    padding-right: 2vw;
 }
   
 .numero {
@@ -50,14 +54,19 @@ body {
     justify-content: center;
     align-items: center;
     width: 10vw;
+    color: white;
+    background-color: rgb(63, 58, 52);
+    border: 0;
 }
   
 .operacion {
-    background-color: rgb(16, 187, 162);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 10vw;
+    color: rgb(63, 58, 52);
+    background-color: rgb(16, 187, 162);
+    border: 0;
 }
   
 .numero:hover {
